# dbt_refactor

./: .gitignore  Query_Testing.sql  hello.py  pyproject.toml
jaffle_shop/: dbt_project.yml
jaffle_shop/models/legacy/: customer_orders.sql  fct_customer_orders.sql
jaffle_shop/models/staging/jaffle_shop/: stg_jaffle_shop__customers.sql  stg_jaffle_shop__orders.sql
